--- a/wp-content/themes/csm/assets/css/main.css
+++ b/wp-content/themes/csm/assets/css/main.css
@@ -517,7 +517,20 @@ input[type=submit] {
     font-size: 70px;
     font-family: "Rubik-Medium", sans-serif;
     line-height: 65px;
-    margin: 0; }
+    margin: 0;
+    background-image: -webkit-linear-gradient(left, #1EB6E9, #1E317E, #DA325A);
+    /* For Chrome and Safari */
+    background-image: -moz-linear-gradient(left, #1EB6E9, #1E317E, #DA325A);
+    /* For old Fx (3.6 to 15) */
+    background-image: -ms-linear-gradient(left, #1EB6E9, #1E317E, #DA325A);
+    /* For pre-releases of IE 10*/
+    background-image: -o-linear-gradient(left, #1EB6E9, #1E317E, #DA325A);
+    /* For old Opera (11.1 to 12.0) */
+    background-image: linear-gradient(to right, #1EB6E9, #1E317E, #DA325A);
+    /* Standard syntax; must be last */
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text; }
   .header-text-block .mobile-header {
     display: none; }
   .header-text-block .btn {
@@ -934,9 +947,9 @@ span.wpcf7-not-valid-tip {
     width: 100%;
     max-width: 100%;
     flex: 1 1 100%; } }
-@media (min-width: 376px) and (max-width: 1023px) {
+@media (min-width: 300px) and (max-width: 1023px) {
   body {
-    min-width: 376px; }
+    min-width: 300px; }
 
   .flex-w {
     flex-direction: column; }
@@ -981,7 +994,7 @@ span.wpcf7-not-valid-tip {
 
   .services-block {
     padding-bottom: 0; } }
-@media (min-width: 376px) and (max-width: 560px) {
+@media (min-width: 300px) and (max-width: 560px) {
   .section2 .pic {
     display: none; }
 
@@ -991,7 +1004,7 @@ span.wpcf7-not-valid-tip {
   .section2 {
     margin-bottom: 18px;
     padding-top: 25px; } }
-@media (min-width: 376px) and (max-width: 762px) {
+@media (min-width: 300px) and (max-width: 762px) {
   .section2 .pic {
     width: 100%;
     left: 0px; }
@@ -1070,7 +1083,7 @@ span.wpcf7-not-valid-tip {
 
   .form input[type=text], .form textarea {
     width: 100%; } }
-@media (min-width: 376px) and (max-width: 548px) {
+@media (min-width: 300px) and (max-width: 548px) {
   #site-header .social-links {
     display: block;
     margin: 10px auto; }
