--- a/wp-content/themes/csm/assets/css/main.scss
+++ b/wp-content/themes/csm/assets/css/main.scss
@@ -629,16 +629,27 @@ input[type=submit] {
   color: #000;
   font-size: 20px;
   text-decoration: none;
-  margin: 7px 40px 0 0;
-
+  margin: 7px 25px 0 0;
+  padding-left: 20px;
   &:before {
     @extend .pseudo;
     width: 14px;
     height: 14px;
     background: url('../images/ico-tel.svg') 0 0 no-repeat;
     background-size: 14px 14px;
-    left: -26px;
+    left: 0;
     top: 6px;
+  }
+}
+
+.btn-phone{
+  width: 44px;
+  height: 44px;
+  background: url('../images/ico-tel-blue.svg') center center no-repeat;
+  background-size: 14px 14px;
+  &:hover{
+    background: url('../images/ico-tel-white.svg') center center no-repeat #16A2E5;
+    background-size: 14px 14px;
   }
 }
 
@@ -1325,12 +1336,14 @@ span.wpcf7-not-valid-tip {
     }
   }
   .ico-tel{
-    display: flex;
+    /*display: flex;*/
+    margin: 0 25px 7px 0;
   }
   .flex{
     justify-content: center;
   }
   .flex.tels{
+    flex-direction: column;
     a:last-child{
       margin-right: 0;
     }
@@ -1342,7 +1355,9 @@ span.wpcf7-not-valid-tip {
     display: none;
   }
   .mobile{
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
   }
   .section2 .pic{
     width: 100%;
